bug(logo): align logo with label - logo should be on same level as site label [finishes #159923227]

--- a/UI/css/main.css
+++ b/UI/css/main.css
@@ -15,14 +15,38 @@
     justify-content: center;
     align-items: center;
     height: 100px;
+    width: auto;
     display: grid;
     background: #3700B3;
     grid-auto-flow: column;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    grid-template-columns: repeat(4,1fr);
     grid-gap: 5px;
     color: white;
    
 }
+
+.logo-section {
+    display: grid;
+    grid-gap: 0em;
+    margin-left: 20px;
+    grid-template-columns: 20% 70%;
+    grid-template-rows: 100px; 
+} 
+.logo img {
+   height:45px;
+   padding-left: 20px;
+   margin-top: 25px;
+}
+.stack p {
+    color: #fdfafa;
+    margin-top: 30px;
+    font-style: bold;
+    font-size: 24px;
+    font-family: cursive;
+    margin-left: 0px;
+     
+}
+
 
 p {
     color: rgb(24, 23, 26);
@@ -39,18 +63,6 @@ margin: 5px;
 height: auto;
 text-decoration: none;
 }
-#title {
-    color: ghostwhite;
-    height: 40px;
-    font-style: bold;
-    font-size: 24px;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    margin-left:20px; 
-   }
-   #img{
-       max-width: 40px;
-
-   }
 
 .search {
     display: grid;
